runners/webshortcuts: Do not use static regex for normal webshortcuts query

The delimiter might change if the settings are changed.
By having a member variable, we still avoid re-creating the same regex for every time the runner is queried.

BUG: 454596